*** empty log message ***

--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -12,6 +12,7 @@ XML_LIBS=@XML_LIBS@
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
+OMNETPP_VERSION=@OMNETPP_VERSION@
 
 #
 # Local definitions (OMNETPP_INCL_DIR is used for platdep/*)
