--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -13,6 +13,7 @@ EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+OMNETPP_VERSION=@OMNETPP_VERSION@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
