--- a/src/scalars/Makefile.in
+++ b/src/scalars/Makefile.in
@@ -13,6 +13,7 @@ LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+OMNETPP_VERSION=@OMNETPP_VERSION@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
