--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -13,6 +13,7 @@ EXE_SUFFIX=@EXE_SUFFIX@
 COPTS=$(CFLAGS)
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+OMNETPP_VERSION=@OMNETPP_VERSION@
 
 all: seedtool tcl2c
 	chmod +x opp_makemake opp_test opp_makedep opp_neddoc splitvec
