--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -25,7 +25,7 @@ GNED_EMBED_SUFFIX=@GNED_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS)
+COPTS=$(CFLAGS) $(TK_CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
 
 OMNETPP_GNED_DIR=@OMNETPP_GNED_DIR@
 
