--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -17,7 +17,7 @@ OMNETPP_VERSION=@OMNETPP_VERSION@
 #
 # Local definitions (OMNETPP_INCL_DIR is used for platdep/*)
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR)
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
 
 #
 # Targets
