--- a/src/scalars/Makefile.in
+++ b/src/scalars/Makefile.in
@@ -27,7 +27,7 @@ SCALARS_EMBED_SUFFIX=@SCALARS_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS)
+COPTS=$(CFLAGS) $(TK_CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
 
 SCALARS_OBJS = scalars$(SCALARS_EMBED_SUFFIX).o \
                tklib.o \
