--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -10,7 +10,7 @@ CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
-COPTS=$(CFLAGS)
+COPTS=$(CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 OMNETPP_VERSION=@OMNETPP_VERSION@
