--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -22,7 +22,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir -DBUILDING_CMDENV
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir -DBUILDING_CMDENV -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
 
 OBJS = cmdenv.o enumstr.o heap.o
 
