--- a/src/gned/Makefile.vc
+++ b/src/gned/Makefile.vc
@@ -20,7 +20,8 @@ LDFLAGS=$(LDFLAGS) /SUBSYSTEM:WINDOWS
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) /I.
+COPTS=$(CFLAGS) $(TK_CFLAGS) /I.  /DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+
 OBJS = gned$(GNED_EMBED_SUFFIX).obj tklib.obj tkcmd.obj arrow.obj \
        ebnf.tab.obj lex.yy.obj parsened.obj nedfile.obj
 
