*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -777,6 +777,7 @@ AC_CONFIG_FILES(
 #----------------------
 
 AC_SUBST(OMNETPP_VERSION)
+AC_SUBST(OMNETPP_EDITION)
 
 AC_SUBST(OMNETPP_BIN_DIR)
 AC_SUBST(OMNETPP_INCL_DIR)
@@ -788,7 +789,6 @@ AC_SUBST(OMNETPP_UTILS_DIR)
 AC_SUBST(OMNETPP_DOC_DIR)
 AC_SUBST(OMNETPP_SAMPLES_DIR)
 AC_SUBST(OMNETPP_TEST_DIR)
-dnl AC_SUBST(OMNETPP_MODELS_DIR)
 
 AC_SUBST(YACC)
 AC_SUBST(LEX)
