--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -13,7 +13,9 @@ EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
@@ -25,7 +27,7 @@ GNED_EMBED_SUFFIX=@GNED_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) $(TK_CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 OMNETPP_GNED_DIR=@OMNETPP_GNED_DIR@
 
