--- a/src/plove-old/Makefile.vc
+++ b/src/plove-old/Makefile.vc
@@ -20,7 +20,7 @@ LDFLAGS=$(LDFLAGS) /SUBSYSTEM:WINDOWS
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) /DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) $(TK_CFLAGS) /DRELEASE="\"$(OMNETPP_VERSION)\"" /DEDITION="\"$(OMNETPP_EDITION)\""
 OBJS = plove.obj
 
 #
