--- a/src/plove/Makefile.in
+++ b/src/plove/Makefile.in
@@ -13,7 +13,9 @@ LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
@@ -35,7 +37,7 @@ endif
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) $(BLT_CFLAGS) -DHAVE_BLT -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) $(TK_CFLAGS) $(BLT_CFLAGS) -DHAVE_BLT -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 PLOVE_OBJS = plove$(PLOVE_EMBED_SUFFIX).o \
                tklib.o \
