--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -10,10 +10,12 @@ CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
-COPTS=$(CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 all: seedtool tcl2c
 	chmod +x opp_makemake opp_test opp_makedep opp_neddoc splitvec
