--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -11,7 +11,9 @@ CFLAGS=@CFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -22,7 +24,7 @@ SO_LIB_SUFFIX=@SO_LIB_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir -DBUILDING_CMDENV -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir -DBUILDING_CMDENV -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 OBJS = cmdenv.o enumstr.o heap.o
 
