--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -14,7 +14,7 @@ CFLAGS=$(CFLAGS) /DWITH_NETBUILDER
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN) /Fd"envir.pdb" /DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN) /Fd"envir.pdb" /DRELEASE="\"$(OMNETPP_VERSION)\"" /DEDITION="\"$(OMNETPP_EDITION)\""
 
 OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj fsutils.obj \
      patmatch.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj \
