--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -12,12 +12,14 @@ XML_LIBS=@XML_LIBS@
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 #
 # Local definitions (OMNETPP_INCL_DIR is used for platdep/*)
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 #
 # Targets
