--- a/src/nedxml/Makefile.in
+++ b/src/nedxml/Makefile.in
@@ -15,7 +15,9 @@ XML_CFLAGS=@XML_CFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
@@ -29,7 +31,7 @@ XMLPARSER=@XMLPARSER@
 #
 # Local definitions
 #
-COPTS=$(CPPFLAGS) $(CFLAGS) $(XML_CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_NEDXML -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CPPFLAGS) $(CFLAGS) $(XML_CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_NEDXML -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 OBJS= nedelements.o nedelement.o nederror.o \
       nedvalidator.o neddtdvalidator.o neddtdvalidator1.o \
