--- a/src/scalars/Makefile.in
+++ b/src/scalars/Makefile.in
@@ -13,7 +13,9 @@ LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 TK_CFLAGS=@TK_CFLAGS@
 TK_LIBS=@TK_LIBS@
@@ -27,7 +29,7 @@ SCALARS_EMBED_SUFFIX=@SCALARS_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) $(TK_CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 SCALARS_OBJS = scalars$(SCALARS_EMBED_SUFFIX).o \
                tklib.o \
