--- a/src/scalars/Makefile.vc
+++ b/src/scalars/Makefile.vc
@@ -20,7 +20,7 @@ LDFLAGS=$(LDFLAGS) /SUBSYSTEM:WINDOWS user32.lib
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) /DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) $(TK_CFLAGS) /DRELEASE="\"$(OMNETPP_VERSION)\"" /DEDITION="\"$(OMNETPP_EDITION)\""
 
 !if "$(HAVE_BLT)"=="yes"
 COPTS=$(COPTS) /DHAVE_BLT
