--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -12,7 +12,9 @@ CFLAGS=@CFLAGS@
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+
 OMNETPP_VERSION=@OMNETPP_VERSION@
+OMNETPP_EDITION=@OMNETPP_EDITION@
 
 TK_CFLAGS=@TK_CFLAGS@
 
@@ -28,7 +30,7 @@ TKENV_EMBED_SUFFIX=@TKENV_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV -DBUILDTIME_OPPVER="$(OMNETPP_VERSION)"
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
 
 OMNETPP_TKENV_DIR=@OMNETPP_TKENV_DIR@
 
