--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -27,7 +27,7 @@ GNED_EMBED_SUFFIX=@GNED_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS) $(TK_CFLAGS)
 
 OMNETPP_GNED_DIR=@OMNETPP_GNED_DIR@
 
