--- a/src/plove/Makefile.vc
+++ b/src/plove/Makefile.vc
@@ -20,7 +20,7 @@ LDFLAGS=$(LDFLAGS) /SUBSYSTEM:WINDOWS user32.lib
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) /DRELEASE="\"$(OMNETPP_VERSION)\"" /DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS) $(TK_CFLAGS)
 
 !if "$(HAVE_BLT)"=="yes"
 COPTS=$(COPTS) /DHAVE_BLT
