--- a/src/scalars/Makefile.in
+++ b/src/scalars/Makefile.in
@@ -29,7 +29,7 @@ SCALARS_EMBED_SUFFIX=@SCALARS_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) $(TK_CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS) $(TK_CFLAGS)
 
 SCALARS_OBJS = scalars$(SCALARS_EMBED_SUFFIX).o \
                tklib.o \
