--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -10,7 +10,7 @@ CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
 
-COPTS=$(CFLAGS) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS)
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 
