--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -19,7 +19,7 @@ OMNETPP_EDITION=@OMNETPP_EDITION@
 #
 # Local definitions (OMNETPP_INCL_DIR is used for platdep/*)
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR)
 
 #
 # Targets
