--- a/src/nedxml/Makefile.in
+++ b/src/nedxml/Makefile.in
@@ -31,7 +31,7 @@ XMLPARSER=@XMLPARSER@
 #
 # Local definitions
 #
-COPTS=$(CPPFLAGS) $(CFLAGS) $(XML_CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_NEDXML -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CPPFLAGS) $(CFLAGS) $(XML_CFLAGS) -I$(OMNETPP_INCL_DIR) -I. -DBUILDING_NEDXML
 
 OBJS= nedelements.o nedelement.o nederror.o \
       nedvalidator.o neddtdvalidator.o neddtdvalidator1.o \
