--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -30,7 +30,7 @@ TKENV_EMBED_SUFFIX=@TKENV_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV -DRELEASE="\"$(OMNETPP_VERSION)\"" -DEDITION="\"$(OMNETPP_EDITION)\""
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV
 
 OMNETPP_TKENV_DIR=@OMNETPP_TKENV_DIR@
 
