--- a/Makefile.vc
+++ b/Makefile.vc
@@ -17,7 +17,7 @@ MAKEFILE=/F Makefile.vc
 
 # Win9x, ME not supported (shell is crippled)
 !if "$(OS)"!="Windows_NT"
-!error This makefile only works on NT (NT4.0, Win2K, XP)
+!error This makefile only works on NT kernel (NT4.0, Win2K, XP)
 !endif
 
 # envir_ilib only needed if dlls are to be built
@@ -35,7 +35,7 @@ ENVIR_ILIB=
 #=====================================================================
 
 
-all: check-env components reminder
+all: prereq components reminder
 
 components: libs progs configsamples samples
 
@@ -189,7 +189,7 @@ docu:
 #
 # Tests
 #
-tests: check-env libs progs
+tests: prereq libs progs
 	@echo ===== Running tests ====
         @cd /d $(OMNETPP_TEST_DIR:/=\) && call runtest.cmd
 
@@ -200,7 +200,7 @@ tests: check-env libs progs
 #=====================================================================
 
 
-check-env:
+prereq:
 	@echo ===== Checking environment =====
 	@if not .%OS%.==.Windows_NT. echo ERROR: This makefile can ONLY be used on NT4.0, Win2K or XP!
 	@echo  Checking if $(CXX) works...
@@ -209,6 +209,7 @@ check-env:
 	@cd /d $(OMNETPP_ROOT:/=\) || echo ERROR: The directory defined in configuser.vc as OMNETPP_ROOT does not exist. && exit 1
 	@echo Checking if TCL_LIB/TCL_VER is correctly set...
 	@cd /d $(_TCL_LIBRARY:/=\) || echo ERROR: The directory $(_TCL_LIBRARY) does not exist. TK_DIR or TK_VER defined in configuser.vc might be wrong. && exit 1
+	@cd /d $(OMNETPP_SRC_DIR:/=\)\utils && copy ver.h.base ver.h && echo #define OMNETPP_RELEASE "$(OMNETPP_VERSION)" >>ver.h && echo #define OMNETPP_EDITION "$(OMNETPP_EDITION)" >>ver.h
 
 configsamples:
 	@echo ===== Configuring .dsp files for samples =====
