--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -53,7 +53,7 @@ depend:
 	$(MAKEDEPEND) -I../../include -fMakefile.vc -- *.cc *.c
 
 clean:
-	-del *.obj seedtool.exe tcl2c.exe opp_replace.exe 2> nul
+	-del *.obj seedtool.exe tcl2c.exe opp_replace.exe ver.h 2> nul
 	-del *.ilk *.idb *.pdb *.pch 2> nul
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
