--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -349,7 +349,7 @@ AR=@AR@
 SHLIB_LD=@SHLIB_LD@
 MAKEDEPEND=@MAKEDEPEND@
 
-CFLAGS=@CFLAGS@
+CFLAGS=@USER_CFLAGS@
 NEDCFLAGS=@NEDCFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
@@ -526,7 +526,7 @@ AR=@AR@
 SHLIB_LD=@SHLIB_LD@
 MAKEDEPEND=@MAKEDEPEND@
 
-CFLAGS=@CFLAGS@
+CFLAGS=@USER_CFLAGS@
 NEDCFLAGS=@NEDCFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
@@ -558,7 +558,7 @@ AR=@${null}AR@
 SHLIB_LD=@${null}SHLIB_LD@
 MAKEDEPEND=@${null}MAKEDEPEND@
 
-CFLAGS=@${null}CFLAGS@
+CFLAGS=@${null}USER_CFLAGS@
 NEDCFLAGS=@${null}NEDCFLAGS@
 LDFLAGS=@${null}LDFLAGS@
 EXE_SUFFIX=@${null}EXE_SUFFIX@
