*** empty log message ***

--- a/samples/database/example1/tokenring-db.ini
+++ b/samples/database/example1/tokenring-db.ini
@@ -5,10 +5,10 @@ outputvectormanager-class = "cMySQLOutputVectorManager"
 outputscalarmanager-class = "cMySQLOutputScalarManager"
 
 # database connect parameters -- see MySQL documentation
-mysql-user = root
-mysql-password = root
-mysql-use-pipe = true
-mysql-database = testdb
+;mysql-user = root
+;mysql-password = root
+;mysql-use-pipe = true  ;selects Windows named pipes
+mysql-database = test
 
 # alternative database -- uncomment "connectprefix" entries below to use it
 anotherdb-mysql-user = root
