*** empty log message ***

--- a/samples/fddi/omnetpp.ini
+++ b/samples/fddi/omnetpp.ini
@@ -14,7 +14,7 @@ status-frequency = 50000
 performance-display = no
 
 [Tkenv]
-default-run=1
+;default-run=1
 
 [Parameters]
 TUBw.NRLoadControlFile = "nr_lctrl"
