*** empty log message ***

--- a/test/perf/omnetpp.ini
+++ b/test/perf/omnetpp.ini
@@ -25,3 +25,15 @@ network=sendTest_1
 
 [Run 5]
 network=sendTest_2
+
+[Run 6]
+network=scheduledEvents_1
+*.iaTime = exponential(1.0)
+*.numScheduledMsgs = 100000
+
+[Run 7]
+network=scheduleAndCancel_1
+*.iaTime = exponential(1.0)
+*.numScheduledMsgs = 100000
+*.cancelsPerEvent = 1
+
